--- a/test/src/test.attach_2_uneven.in
+++ b/test/src/test.attach_2_uneven.in
@@ -46,6 +46,10 @@ fi
 
 NUMTASKS=`expr $NUMNODES / 2 \* @SMP@ + 2`
 WAITAMOUNT=$NUMNODES 
+if test $NUMNODES -lt 10 ; then
+  WAITAMOUNT=20
+fi
+
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 export LMON_PREFIX=@LMONPREFIX@
