--- a/test/src/test.attach_4_shutdownbe.in
+++ b/test/src/test.attach_4_shutdownbe.in
@@ -54,6 +54,9 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES 
+if test $NUMNODES -lt 10 ; then
+  WAITAMOUNT=20
+fi
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 export LMON_PREFIX=@LMONPREFIX@
