--- a/test/src/test.attach_1.in
+++ b/test/src/test.attach_1.in
@@ -47,7 +47,7 @@ fi
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
 WAITAMOUNT=$NUMNODES 
-if test $NUMNODES -lt 10 ; then 
+if test $NUMNODES -lt 20 ; then 
   WAITAMOUNT=20
 fi 
 
@@ -58,6 +58,7 @@ export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
   WAITAMOUNT=`expr $WAITAMOUNT`
