--- a/test/src/test.attach_2_uneven.in
+++ b/test/src/test.attach_2_uneven.in
@@ -46,7 +46,7 @@ fi
 
 NUMTASKS=`expr $NUMNODES / 2 \* @SMP@ + 2`
 WAITAMOUNT=$NUMNODES 
-if test $NUMNODES -lt 10 ; then
+if test $NUMNODES -lt 20 ; then
   WAITAMOUNT=20
 fi
 
@@ -56,9 +56,10 @@ export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
  
 if test "x$RM_TYPE" = "xRC_slurm" ; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
-  WAITAMOUNT=`expr $WAITAMOUNT \* 5`
+  WAITAMOUNT=`expr $WAITAMOUNT`
   nohup $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 elif test "x$RM_TYPE" = "xRC_bgqrm"; then
   WAITAMOUNT=`expr $WAITAMOUNT`
