--- a/test/src/test.attach_4_detach.in
+++ b/test/src/test.attach_4_detach.in
@@ -39,7 +39,7 @@ NUMNODES=@NNODES@
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES 
-if test $NUMNODES -lt 10 ; then
+if test $NUMNODES -lt 20 ; then
   WAITAMOUNT=20
 fi
 SIGNUM=10
@@ -49,8 +49,10 @@ export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_FE_DETACH_TEST=1
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 elif test "x$RM_TYPE" = "xRC_bgqrm"; then
   WAITAMOUNT=`expr $WAITAMOUNT`
