minor fixes for problems found with OpenMPI/OpenRTE

--- a/launchmon/src/rm_openrte.conf
+++ b/launchmon/src/rm_openrte.conf
@@ -52,4 +52,4 @@ RM_launcher_so=libopen-rte.so
 RM_launch_helper=mpir
 RM_signal_for_kill=SIGINT
 RM_fail_detection=false
-RM_launch_str=--lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=%o --lmonsharedsec=%s --lmonsecchk=%c
