--- a/test/src/test.fe_regStatusCB.in
+++ b/test/src/test.fe_regStatusCB.in
@@ -43,6 +43,10 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES 
+if test $NUMNODES -lt 20 ; then
+  WAITAMOUNT=20
+fi
+
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 export LMON_PREFIX=@LMONPREFIX@
@@ -50,6 +54,7 @@ export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_STATUS_CB_TEST=1
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_bgrm" ; then 
   WAITAMOUNT=`expr $WAITAMOUNT`
@@ -59,7 +64,7 @@ elif test "x$RM_TYPE" = "xRC_alps" ; then
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xRC_orte" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
-  $MPI_JOB_LAUNCHER_PATH -gmca orte_enable_debug_cospawn_while_running 1 -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ 
+  $MPI_JOB_LAUNCHER_PATH -mca debugger mpirx -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 else
   echo "This RM is not supported yet" 
 fi
