--- a/launchmon/src/rm_gupc.conf
+++ b/launchmon/src/rm_gupc.conf
@@ -1,6 +1,6 @@
 ## $Header: $
 ##
-## rm_info.conf
+## rm_slurm.conf
 ##
 ##--------------------------------------------------------------------------------
 ## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
@@ -31,31 +31,28 @@
 ##        Sep 30 2011 DHA: Created file.
 ##
 ##
-## [platform]
-## config file for each supported RM
+## RM: the name of Resource Manager
+## RM_launcher: the name of the launcher command
+## RM_launcher_id: the rule to get the launcher id 
+## (e.g., RM_launcher|sym|srun says the launcher is identify by testing 
+##        RM_launcher's symbol by the name of srun)
+## RM_jobid: the rule to get the target jobid
+## (e.g., RM_jobid=RM_launcher|sym|totalview_jobid|string says
+##        jobid can be obtained from the launcher's symbol, totalview_jobid,
+##        interpreting that as the string type.
+## RM_launcher_helper= method or command to launch daemons
+## RM_launch_str= options and arguements used for RM_launch_mth.
+##
+## TODO: do something about kill-support
 ##
 
-[linux-x86]
-rm_slurm.conf
-rm_openrte.conf
-rm_mchecker.conf
+RM=gupc
+RM_MPIR=STD
+RM_launcher=*
+RM_launcher_id=RM_launcher|sym|upc_main
+RM_jobid=RM_launcher|pid
+RM_launch_helper=LMON_REMOTE_LOGIN
+RM_signal_for_kill=SIGTERM
+RM_fail_detection=true
+RM_launch_str=%h %d %o --lmonsharedsec=%s --lmonsecchk=%c
 
-[linux-x86_64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_mchecker.conf
-rm_gupc.conf
-
-[linux-power]
-rm_bglrm.conf
-rm_bgprm.conf
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-
-[linux-power64]
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-rm_gupc.conf
