Added better configurations for BGQ with native bgqrm (LoadLeveler/runjob) and make unknown resource manager condition fatal

--- a/launchmon/src/rm_bgqrm.conf
+++ b/launchmon/src/rm_bgqrm.conf
@@ -48,8 +48,7 @@ RM=bgqrm
 RM_MPIR=STD_COLOC
 RM_launcher=runjob
 RM_launcher=start_tool
-RM_launcher_id=RM_launcher|sym|runjob::client::Runjob::start()
-RM_launcher_id=RM_launcher|sym|runjob::tool::Daemon::Daemon()
+RM_launcher_id=RM_launcher|sym|00000011.plt_call._ZN7bgsched6runjob6Client4Impl5startEiii+0
 RM_launcher_so=librunjob_client.so.1
 RM_launch_helper=mpir
 RM_signal_for_kill=SIGINT
