Fix for MPIR_breakpoint release race for Blue Gene /P

--- a/launchmon/src/rm_bgprm.conf
+++ b/launchmon/src/rm_bgprm.conf
@@ -28,7 +28,8 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
-##        Oct 3 2011 DHA: Created file.
+#*        Dec 14 2012 DHA: Updated the signiture for the launcher 
+##        Oct 3  2011 DHA: Created file.
 ##
 ##
 ## RM: the name of Resource Manager
@@ -48,7 +49,7 @@ RM_MPIR=STD_COLOC
 RM_launcher=mpirun64
 RM_launcher=mpirun32
 RM_launcher=mpirun
-RM_launcher_id=RM_launcher|sym|mpirun.cc
+RM_launcher_id=RM_launcher|sym|external_mpirun_done
 RM_launch_helper=mpir
 RM_signal_for_kill=SIGINT
 RM_fail_detection=false
