--- a/launchmon/src/linux/lmon_api/Makefile.am
+++ b/launchmon/src/linux/lmon_api/Makefile.am
@@ -129,7 +129,7 @@ libmonmwapi_la_SOURCES       = lmon_mw.cxx \
                                ../sdbg_rsh_spawner.cxx \
                                lmon_coloc_spawner.hxx \
                                lmon_daemon_internal.hxx \
-                               ../sdbg_rsh_spawer.hxx \
+                               ../sdbg_rsh_spawner.hxx \
                                ../../lmon_api/lmon_api_std.h \
                                ../../lmon_api/lmon_mw.h \
                                ../../lmon_api/lmon_proctab.h \
