--- a/launchmon/man/Makefile.in
+++ b/launchmon/man/Makefile.in
@@ -161,6 +161,8 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
+RMINC = @RMINC@
+RMLIB = @RMLIB@
 RM_TYPE = @RM_TYPE@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
