--- a/tools/alps/src/Makefile.in
+++ b/tools/alps/src/Makefile.in
@@ -44,6 +44,7 @@ am__aclocal_m4_deps = $(top_srcdir)/config/x_ac_bootfabric.m4 \
 	$(top_srcdir)/config/x_ac_enable_verbose.m4 \
 	$(top_srcdir)/config/x_ac_gcrypt.m4 \
 	$(top_srcdir)/config/x_ac_mpicc.m4 \
+	$(top_srcdir)/config/x_ac_myboost.m4 \
 	$(top_srcdir)/config/x_ac_platform.m4 \
 	$(top_srcdir)/config/x_ac_testnnodes.m4 \
 	$(top_srcdir)/config/x_ac_tracing_cost.m4 \
@@ -182,6 +183,7 @@ MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
 MPICC = @MPICC@
 MPICXX = @MPICXX@
+MYBOOSTLOC = @MYBOOSTLOC@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
@@ -196,6 +198,8 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
+RMINC = @RMINC@
+RMLIB = @RMLIB@
 RM_TYPE = @RM_TYPE@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -266,12 +270,12 @@ tvcmd = @tvcmd@
 INCLUDES = -I$(top_srcdir) \
 				    -I$(top_srcdir)/launchmon/src \
 				    -I$(top_srcdir)/@LMONAPILOC@ \
-				    -I@ALPS_INC_DIR@
+				    -I@RMINC@
 
 alps_be_starter_SOURCES = alps_be_starter.c 
 alps_fe_colocator_SOURCES = alps_fe_colocator.cxx
 alps_fe_colocator_CXXFLAGS = @LNCHR_BIT_FLAGS@
-alps_fe_colocator_LDADD = @LIBELF@ @LIBALPS@
+alps_fe_colocator_LDADD = @LIBELF@ @RMLIB@
 etcdir = ${prefix}/etc
 etc_SCRIPTS = CLE-dso.conf \
                                   CLE_2_2-dso.conf \
