--- a/package.conf
+++ b/package.conf
@@ -38,12 +38,12 @@ Loads LaunchMON \n \
 Modifies \$MANPATH and \$PATH.\n For API usage, \
 see man pages.\n\n"
 
-PKG_doc="LaunchMON doc: ${prefix}/man/man3/LMON_fe_launchAndSpawnDaemons.3"
+PKG_doc="LaunchMON doc: ${prefix}/share/man/man3/LMON_fe_launchAndSpawnDaemons.3"
 
 pkg_build()
 { 
 
-  ./configure --prefix=$prefix --with-test-rm=slurm --with-mw-hostlist=atlas544:atlas1088
+  ./configure --prefix=$prefix --with-test-rm=slurm --with-test-nnodes=2 --with-test-ncore-per-CN=8 --with-mw-hostlist=sierra1620:sierra1626
   make 
 
   return 0
