--- a/Makefile.in
+++ b/Makefile.in
@@ -41,7 +41,12 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	config/depcomp config/install-sh config/ltmain.sh \
 	config/missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/config/x_ac_bootfabric.m4 \
+am__aclocal_m4_deps = $(top_srcdir)/config/libtool.m4 \
+	$(top_srcdir)/config/ltoptions.m4 \
+	$(top_srcdir)/config/ltsugar.m4 \
+	$(top_srcdir)/config/ltversion.m4 \
+	$(top_srcdir)/config/lt~obsolete.m4 \
+	$(top_srcdir)/config/x_ac_bootfabric.m4 \
 	$(top_srcdir)/config/x_ac_enable_debug.m4 \
 	$(top_srcdir)/config/x_ac_enable_verbose.m4 \
 	$(top_srcdir)/config/x_ac_gcrypt.m4 \
@@ -263,7 +268,14 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 tvcmd = @tvcmd@
 SUBDIRS = tools launchmon test
-EXTRA_DIST = config/ap README.ERROR_HANDLING package.conf bootstrap INSTALL.launchmon
+EXTRA_DIST = config/ap \
+		  README.ERROR_HANDLING \
+		  package.conf \
+		  launchmon.spec \
+                  launchmon.module \
+		  bootstrap \
+		  INSTALL.launchmon
+
 ACLOCAL_AMFLAGS = -I config
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
