applied patches and cleaned up the code base to make a 1.0.1 release

--- a/package.conf
+++ b/package.conf
@@ -7,6 +7,10 @@
 # The LLNL's package configuration script for LaunchMON
 #
 # Update:
+#         Apr 30 2014 DHA: UPdated for 1.0.1
+#         Apr 15 2014 DHA: Updated for 1.0-beta2 
+#         (actually downgrade in version number since no Cray support)
+#         PKG_VERSION=20
 #         Jun 07 2012 DHA: Updated for 1.0 release  
 #         Oct 27 2010 DHA: Updated for 0.7.2 official release  
 #                          of 0.7
@@ -19,9 +23,9 @@
 #
 #
 
-_vers=1.0.0
+_vers=1.0.1
 PKG_NAME=launchmon-${_vers}
-PKG_VERSION=15
+PKG_VERSION=21
 PKG_SECTION=tools
 PKG_SHORT_DESCRIPTION="LaunchMON: Tool daemon launching infrastructure v${_vers}"  
 PKG_MAINTAINER="Dong H. Ahn <ahn1@llnl.gov>"
@@ -43,7 +47,7 @@ PKG_doc="LaunchMON doc: ${prefix}/share/man/man3/LMON_fe_launchAndSpawnDaemons.3
 pkg_build()
 { 
 
-  ./configure --prefix=$prefix --with-test-rm=slurm --with-test-nnodes=2 --with-test-ncore-per-CN=8 --with-mw-hostlist=sierra1620:sierra1626
+  ./configure --prefix=$prefix --with-test-rm=slurm --with-test-nnodes=2 --with-test-ncore-per-CN=12 --with-sec-munge --with-test-mw-hostlist=sierra1620:sierra1626
   make 
 
   return 0
