Add -lgpg-error to test LDADDs in libgcrypt.
From: https://forum.videolan.org/viewtopic.php?f=13&t=33860#p121003

Fixes Ubuntu/Fedora 21 link failures.

--- a/tools/libgcrypt/tests/Makefile.in
+++ b/tools/libgcrypt/tests/Makefile.in
@@ -208,17 +208,17 @@ ac_DEPENDENCIES = ../src/libgcrypt.la
 ac_LDFLAGS =
 basic_SOURCES = basic.c
 basic_OBJECTS = basic.$(OBJEXT)
-basic_LDADD = $(LDADD)
+basic_LDADD = $(LDADD) -lgpg-error
 basic_DEPENDENCIES = ../src/libgcrypt.la
 basic_LDFLAGS =
 benchmark_SOURCES = benchmark.c
 benchmark_OBJECTS = benchmark.$(OBJEXT)
-benchmark_LDADD = $(LDADD)
+benchmark_LDADD = $(LDADD) -lgpg-error
 benchmark_DEPENDENCIES = ../src/libgcrypt.la
 benchmark_LDFLAGS =
 keygen_SOURCES = keygen.c
 keygen_OBJECTS = keygen.$(OBJEXT)
-keygen_LDADD = $(LDADD)
+keygen_LDADD = $(LDADD) -lgpg-error
 keygen_DEPENDENCIES = ../src/libgcrypt.la
 keygen_LDFLAGS =
 prime_SOURCES = prime.c
@@ -243,7 +243,7 @@ testapi_DEPENDENCIES = ../src/libgcrypt.la
 testapi_LDFLAGS =
 tsexp_SOURCES = tsexp.c
 tsexp_OBJECTS = tsexp.$(OBJEXT)
-tsexp_LDADD = $(LDADD)
+tsexp_LDADD = $(LDADD) -lgpg-error
 tsexp_DEPENDENCIES = ../src/libgcrypt.la
 tsexp_LDFLAGS =
 
