read rm files refactored

--- a/launchmon/src/rm_info.conf
+++ b/launchmon/src/rm_info.conf
@@ -36,23 +36,23 @@
 ##
 
 [linux-x86]
-rm_slurm.conf
-rm_openrte.conf
-rm_mchecker.conf
+file=rm_slurm.conf
+file=rm_openrte.conf
+file=rm_mchecker.conf
 
 [linux-x86_64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_mchecker.conf
-rm_gupc.conf
+file=rm_slurm.conf
+file=rm_openrte.conf
+file=rm_alps.conf
+file=rm_mchecker.conf
+file=rm_gupc.conf
 
 [linux-power]
-rm_bglrm.conf
-rm_bgprm.conf
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
+file=rm_bglrm.conf
+file=rm_bgprm.conf
+file=rm_bgqrm.conf
+file=rm_bgq_slurm.conf
+file=rm_mchecker.conf
 
 [linux-power64]
 rm_bgqrm.conf
