--- a/launchmon/src/rm_openrte.conf
+++ b/launchmon/src/rm_openrte.conf
@@ -45,6 +45,7 @@
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
+[configuration]
 RM=openrte
 RM_MPIR=STD_COLOC_FIFO
 RM_launcher=orterun
