--- a/launchmon/src/rm_bglrm.conf
+++ b/launchmon/src/rm_bglrm.conf
@@ -44,6 +44,7 @@
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
+[configuration]
 RM=bglrm
 RM_MPIR=STD_COLOC
 RM_launcher=mpirun64
