--- a/launchmon/src/rm_bgprm.conf
+++ b/launchmon/src/rm_bgprm.conf
@@ -44,6 +44,8 @@
 ## RM_launcher_helper= method or command to launch daemons
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
+
+[configuration]
 RM=bgprm
 RM_MPIR=STD_COLOC
 RM_launcher=mpirun64
