--- a/launchmon/src/rm_bgq_slurm.conf
+++ b/launchmon/src/rm_bgq_slurm.conf
@@ -44,6 +44,7 @@
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
+[configuration]
 RM=bgq_slurm
 RM_MPIR=STD_COLOC
 RM_launcher=srun
