--- a/launchmon/src/rm_bgqrm.conf
+++ b/launchmon/src/rm_bgqrm.conf
@@ -44,6 +44,7 @@
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
+[configuration]
 RM=bgqrm
 RM_MPIR=STD_COLOC
 RM_launcher=runjob
