--- a/launchmon/src/rm_mchecker.conf
+++ b/launchmon/src/rm_mchecker.conf
@@ -44,6 +44,7 @@
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
+[configuration]
 RM=modelchecker
 RM_MPIR=STD
 RM_launcher=LE_model_checker
