added sattach support

--- a/launchmon/src/rm_slurm.conf
+++ b/launchmon/src/rm_slurm.conf
@@ -29,6 +29,7 @@
 ##
 ##  Update Log:
 ##        Sep 30 2011 DHA: Created file.
+##        Feb 02 2016 GLL: Added sattach.
 ##
 ##
 ## RM: the name of Resource Manager
@@ -50,7 +51,9 @@ RM=slurm
 RM_MPIR=STD
 RM_launcher=srun
 RM_launcher=lt-srun
+RM_launcher=sattach
 RM_launcher_id=RM_launcher|sym|srun
+RM_launcher_id=RM_launcher|sym|sattach
 RM_jobid=RM_launcher|sym|totalview_jobid|string
 RM_launch_helper=srun
 RM_signal_for_kill=SIGINT|SIGINT
